--- a/app/client/main.css
+++ b/app/client/main.css
@@ -32,7 +32,7 @@ body {
     right: 50%;
     top: -45px;
     margin-right: -32px;
-    background: #ffc066;
+    background: #aaaaaa;
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
@@ -65,11 +65,11 @@ body {
     border-left: 5px solid #00b0f0;
 }
 .blmd-wrapp .blmd-continer form#Register-form > h1 {
-    border-left: 5px solid #ffc066;
+    border-left: 5px solid #aaaaaa;
     color: #fff;
 }
 .blmd-wrapp .blmd-continer form#Register-form .blmd-form .blmd-line:after {
-    background: #ffc066;
+    background: #aaaaaa;
 }
 .blmd-wrapp .blmd-continer form#Register-form .blmd-form .form-control {
     color: #fff;
@@ -175,12 +175,12 @@ body {
     background: #00b0f0;
 }
 .btn-blmd.btn.btn-warning {
-    background: #ffc066;
+    background: #aaaaaa;
     color: #fff;
 }
 .btn-blmd.btn.btn-warning:hover,
 .btn-blmd.btn.btn-warning:focus {
-    background: #ffb54c;
+    background: #aaaaaa;
 }
 .btn-blmd.btn.btn-danger {
     background: #d65c4f;
