--- a/app/client/floorPlan/floorplan.css
+++ b/app/client/floorPlan/floorplan.css
@@ -1,10 +1,25 @@
-
-.four.column.grid
-{
-	padding-right:5%;
-	padding-left:5%;
+.four.column.grid {
+    padding-top: 3%;
+    padding-right: 5%;
+    padding-left: 5%;
 }
-.segment
-{
-    cursor: pointer;
+.tableNum{
+    font-weight: bold;
+    text-align:center;
+    text-decoration: underline;
+    margin-top: -10px;
+    margin-right: 20px;
+}
+.ui.inverted.segment{
+    background: rgba(27, 28, 29, 0.93);
+    height: 130px;
+}
+.ui.inverted.segment:hover{
+    background: rgba(27, 28, 29,1);
+}
+.users.icon {
+    float: left;
+    text-decoration: none;
+    font-weight: normal;
+
 }
