--- a/app/client/reservation/reservation.css
+++ b/app/client/reservation/reservation.css
@@ -35,8 +35,7 @@
     margin-top:30px;
 }
 .form-group{
-    margin-right: 30px;
-    margin-bottom: 15px;
+   padding-right:5%;
 }
 .timeLabel{
     margin-bottom:0px;
