--- a/app/client/order/order.css
+++ b/app/client/order/order.css
@@ -14,3 +14,8 @@
 .ui.celled.grid > .spaced.row {
   margin-bottom: 10px;
 }
+
+.ui.celled.grid > .active.row {
+  background-color: #00B0F0;
+  margin-bottom: 3px;
+}
