randomized order items, updated UI

--- a/app/client/order/order.css
+++ b/app/client/order/order.css
@@ -19,3 +19,9 @@
   background-color: #00B0F0;
   margin-bottom: 3px;
 }
+
+#scrollfeature {
+  height: 64px;
+  word-wrap: break-word;
+  overflow: scroll;
+}
