--- a/app/client/waiter/waiter.css
+++ b/app/client/waiter/waiter.css
@@ -173,5 +173,13 @@ body.menu-active div#content .menu-trigger {
 #drinksModal {
     position: fixed;
 }
-
+.floatRight {
+    float: right;
+}
+#floatLeft{
+    float: left;
+}
+#grayText {
+    color: gray;
+}
 
