changed timer functions to run multiple timers, added red color to div when it expires and added undo button for done button

--- a/app/client/order/order.css
+++ b/app/client/order/order.css
@@ -16,7 +16,12 @@
 }
 
 .ui.celled.grid > .active.row {
-  background-color: #00B0F0;
+  background-color: rgba(0, 176, 240, 0.8);
+  margin-bottom: 3px;
+}
+
+.ui.celled.grid > .expired.row {
+  background-color: rgba(227, 73, 50, 0.8);
   margin-bottom: 3px;
 }
 
