--- a/app/client/inventory/inventory.css
+++ b/app/client/inventory/inventory.css
@@ -179,6 +179,10 @@ input[type='checkbox'] {
     float:right;
     margin-left:10px;
 }
+#shoppingSend{
+    float:right;
+    margin-left:10px;
+}
 #inventoryForm {
     padding: 10px;
 }
@@ -186,7 +190,14 @@ input[type='checkbox'] {
     float:right;
     padding-left: 13px;
 }
-#inventoryH1{
+#titleH1{
+    color: #3a3a3a;
+    padding-top: 5px;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    padding-left:15%;
+}
+#titleH12{
     color: #3a3a3a;
     padding-top: 5px;
     font-family: 'Lato', sans-serif;
@@ -197,9 +208,16 @@ input[type='checkbox'] {
     max-height: 500px;
     overflow: scroll;
 }
+#shoppingList {
+    max-height: 410px;
+    overflow:scroll;
+}
 #miniInput {
     width: 50px;
     height: 25px;
+}
+.smallTd {
+    width: 10px;
 }
 
 
