--- a/app/client/floorPlan/floorplan.css
+++ b/app/client/floorPlan/floorplan.css
@@ -10,10 +10,10 @@
     margin-top: -10px;
     margin-right: 20px;
 }
-.ui.inverted.segment{
+.ui.inverted.segment {
     background: rgba(27, 28, 29, 0.9);
     height: 130px;
-	border: outset;
+    border: outset;
 }
 .ui.inverted.segment:hover{
     background: rgba(27, 28, 29,1);
@@ -47,4 +47,8 @@
 .trash.icon{
    margin-top: -10px;
    padding-right: 40%;
+}
+.ui.raised.inverted.segment.selectedTable {
+    border-style: dashed;
+    border-color: red;
 }
