--- a/app/client/inventory/inventory.css
+++ b/app/client/inventory/inventory.css
@@ -37,28 +37,28 @@
 }
 
 
-table {
+table.inventoryTable {
     border: none;
     outline: none;
     width: 100%;
 }
-table tr.table-header td {
+table.inventoryTable tr.table-header td {
     font-size: 0.7em;
     font-weight: bolder;
 }
-table td {
+table.inventoryTable td {
     padding: 0.75em 0.5em;
 }
-table td:first-child {
+table.inventoryTable td:first-child {
     text-align: left;
 }
-table td:nth-child(3) {
+table.inventoryTable td:nth-child(3) {
     text-align: center;
 }
-table td:last-child, table td:nth-child(4) {
+table.inventoryTable td:last-child, table td:nth-child(4) {
     text-align: right;
 }
-table tr:nth-child(2n+2) {
+table.inventoryTable tr:nth-child(2n+2) {
     background: #ebebeb;
 }
 
