added popular items pie charts and ability to switch between pages

--- a/app/client/stat/stat.css
+++ b/app/client/stat/stat.css
@@ -33,3 +33,12 @@ hgroup, main, menu, nav, section, summary {
 .chart {
   margin: auto;
 }
+
+.arc text {
+  font: 10px sans-serif;
+  text-anchor: middle;
+}
+
+.arc path {
+  stroke: #fff;
+}
