--- a/app/client/Login/login.css
+++ b/app/client/Login/login.css
@@ -1,3 +1,5 @@
+/*Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel*/
+/*Project Website: https://github.com/Mitbits/Software-Project*/
 body{
     background: #f3f3f3;
     background-image: url("http://subtlepatterns.com/patterns/purty_wood.png");
