--- a/app/client/inventory/inventory.css
+++ b/app/client/inventory/inventory.css
@@ -1,3 +1,5 @@
+/*Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel*/
+/*Project Website: https://github.com/Mitbits/Software-Project*/
 @import url("http://www.markmurray.co/codepen/customstyle.css");
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400,700");
 *, *:before, *:after {
