--- a/app/client/waiter/waiter.css
+++ b/app/client/waiter/waiter.css
@@ -1,3 +1,5 @@
+/*Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel*/
+/*Project Website: https://github.com/Mitbits/Software-Project*/
 @import url(http://fonts.googleapis.com/css?family=Oxygen:400,700);
 /*
   Fonts
