added authors for all html and css files except for stats - didnt want to create merge conflicts

--- a/app/client/inventory/inventory.css
+++ b/app/client/inventory/inventory.css
@@ -1,3 +1,8 @@
+/**
+ * Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+ * Project Website - https://github.com/Mitbits/Software-Project
+ */
+
 @import url("http://www.markmurray.co/codepen/customstyle.css");
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400,700");
 *, *:before, *:after {
