--- a/app/client/manager/manager.css
+++ b/app/client/manager/manager.css
@@ -1,3 +1,7 @@
+/**
+ * Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+ * Project Website - https://github.com/Mitbits/Software-Project
+ */
 
 /*div.manager {*/
     /*position: fixed;*/
