--- a/app/client/order/order.css
+++ b/app/client/order/order.css
@@ -1,3 +1,8 @@
+/**
+ * Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+ * Project Website - https://github.com/Mitbits/Software-Project
+ */
+
 .ui.celled.grid > .white.row {
   background-color: rgba(255, 255, 255, 0.8);
   margin-bottom: 3px;
