--- a/app/client/floorPlan/floorplan.css
+++ b/app/client/floorPlan/floorplan.css
@@ -1,3 +1,8 @@
+/**
+ * Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+ * Project Website - https://github.com/Mitbits/Software-Project
+ */
+
 #fourColumnGrid {
     padding-top: 3%;
     padding-right: 5%;
