--- a/app/client/reservation/reservation.css
+++ b/app/client/reservation/reservation.css
@@ -1,3 +1,8 @@
+/**
+ * Authors - Mit, Raj, Prabhjot, Nill, Dylan, Mouli
+ * Project Website - https://github.com/Mitbits/Software-Project
+ */
+
 #reserve_form {
     padding-left:3%;
     padding-right:3%;
