--- a/app/client/stat/d3_timeseries.css
+++ b/app/client/stat/d3_timeseries.css
@@ -1,3 +1,5 @@
+/*Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel*/
+/*Project Website: https://github.com/Mitbits/Software-Project*/
 .d3_timeseries.axis {
   font: 10px sans-serif;
 }
