--- a/app/client/stat/stat.css
+++ b/app/client/stat/stat.css
@@ -1,3 +1,5 @@
+/*Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel*/
+/*Project Website: https://github.com/Mitbits/Software-Project*/
 * {
   box-sizing: border-box;
 }
